simpleapp/k8s/ingress-svc-https.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/use-regex: "true"
# spec:
#   rules:
#     - host: housekeeping.dev
#       http:
#         paths:
#           - path: /?(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: azure-app-service
#                 port:
#                   number: 2000
#################### https
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'azure/application-gateway'
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    # appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    # nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD ANNOTATION
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE ANNOTATION
spec:
  tls:
    - hosts:
      - <AppGW Public IP Host Name>.<region>.cloudapp.azure.com
      secretName: aks-tls-akv
  rules:
    - host: <AppGW Public IP Host Name>.<region>.cloudapp.azure.com
      http:
        paths:
          - path: /*
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: azure-app-service
                port:
                  number: 2000
